@@ -1,17 +1,19 @@
 package io.github.zap.zombies.game.mob.mechanic;
 
-import com.google.common.collect.ImmutableList;
+import com.destroystokyo.paper.event.entity.EntityRemoveFromWorldEvent;
 import io.github.zap.arenaapi.util.MetadataHelper;
 import io.github.zap.zombies.Zombies;
 import io.github.zap.zombies.game.SpawnMethod;
 import io.github.zap.zombies.game.ZombiesArena;
 import io.github.zap.zombies.game.data.map.SpawnEntryData;
+import io.lumine.xikage.mythicmobs.MythicMobs;
 import io.lumine.xikage.mythicmobs.adapters.AbstractEntity;
-import io.lumine.xikage.mythicmobs.api.bukkit.events.MythicMobDeathEvent;
 import io.lumine.xikage.mythicmobs.io.MythicLineConfig;
 import io.lumine.xikage.mythicmobs.mobs.ActiveMob;
 import io.lumine.xikage.mythicmobs.skills.SkillMetadata;
 import io.lumine.xikage.mythicmobs.util.annotations.MythicMechanic;
+import org.bukkit.Bukkit;
+import org.bukkit.entity.Entity;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.metadata.MetadataValue;
@@ -24,7 +26,48 @@ import java.util.*;
         description = "General skill used for spawning mobs in Zombies games."
 )
 public class SpawnMobMechanic extends ZombiesArenaSkill implements Listener {
-    private static final String OWNER_METADATA_NAME = "spawn_owner";
+    private static final String PARENT = "skill.spawnmobs.parent";
+    private static final String CHILDREN = "skill.spawnmobs.children";
+
+    private static class Handler implements Listener {
+        private Handler() {
+            Bukkit.getPluginManager().registerEvents(this, Zombies.getInstance());
+        }
+
+        @EventHandler
+        private void onEntityRemoveFromWorld(EntityRemoveFromWorldEvent event) {
+            Optional<MetadataValue> ownerOptional = MetadataHelper.getMetadataValue(event.getEntity(),
+                    Zombies.getInstance(), PARENT);
+
+            if(ownerOptional.isPresent()) {
+                UUID owner = (UUID)ownerOptional.get().value();
+                if(owner != null) {
+                    Entity ownerEntity = Bukkit.getEntity(owner);
+
+                    if(ownerEntity != null) {
+                        UUID self = event.getEntity().getUniqueId();
+                        Optional<ActiveMob> selfOpt = MythicMobs.inst().getMobManager().getActiveMob(self);
+
+                        if(selfOpt.isPresent()) {
+                            ActiveMob selfActive = selfOpt.get();
+                            String mobType = selfActive.getMobType();
+                            Optional<MetadataValue> childrenOptional = MetadataHelper.getMetadataValue(ownerEntity,
+                                    Zombies.getInstance(), CHILDREN + "." + mobType);
+
+                            Optional<ActiveMob> activeMob = MythicMobs.inst().getMobManager().getActiveMob(self);
+                            if(activeMob.isPresent() && activeMob.get().getMobType().equals(mobType)) {
+                                Set<UUID> childMobs;
+                                //noinspection unchecked
+                                if(childrenOptional.isPresent() && (childMobs = (Set<UUID>)childrenOptional.get().value()) != null) {
+                                    childMobs.remove(self);
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 
     private final String mobType;
     private final int mobCountMin;
@@ -35,12 +78,12 @@ public class SpawnMobMechanic extends ZombiesArenaSkill implements Listener {
     private final double spawnRadiusSquared;
     private final double originRadiusSquared;
 
-    private static final Map<UUID, Set<UUID>> mobs = new HashMap<>();
-    private static final Random RNG = new Random();
+    static {
+        new Handler();
+    }
 
     public SpawnMobMechanic(String skill, MythicLineConfig mlc) {
         super(skill, mlc);
-        super.setAsyncSafe(false);
         mobType = mlc.getString("mobType");
         mobCountMin = mlc.getInteger("mobCountMin", 1);
         mobCountMax = mlc.getInteger("mobCountMax", 1);
@@ -49,38 +92,40 @@ public class SpawnMobMechanic extends ZombiesArenaSkill implements Listener {
         ignoreSpawnrule = mlc.getBoolean("ignoreSpawnrule", false);
         spawnRadiusSquared = mlc.getDouble("slaRadiusSquared", 4096);
         originRadiusSquared = mlc.getDouble("originRadiusSquared", 1024);
-
-        Zombies.getInstance().getServer().getPluginManager().registerEvents(this, Zombies.getInstance());
+        new Handler();
     }
 
     @Override
     public boolean cast(@NotNull SkillMetadata metadata, @NotNull ZombiesArena arena) {
         AbstractEntity caster = metadata.getCaster().getEntity();
-        Set<UUID> spawnedMobs = mobs.computeIfAbsent(caster.getUniqueId(), uuid -> new HashSet<>());
+        MetadataValue value = MetadataHelper.computeFixedValueIfAbsent(caster.getBukkitEntity(), Zombies.getInstance(),
+                CHILDREN + "." + mobType, (str) -> new HashSet<>());
 
-        if(spawnedMobs.size() < mobCap) {
-            int limit = mobCap - spawnedMobs.size();
+        //noinspection unchecked
+        Set<UUID> childMobs = (Set<UUID>) value.value();
+        if(childMobs != null && childMobs.size() < mobCap) {
+            int limit = mobCap - childMobs.size();
             int rngBound = mobCountMax - mobCountMin;
-            int spawnAmount = Math.min(limit, mobCountMin + ((rngBound <= 0) ? 0 : RNG.nextInt(rngBound)));
+            int spawnAmount = Math.min(limit, mobCountMin + (int)((double)rngBound * Math.random()));
 
             if(useSpawnpoints) {
-                List<ActiveMob> spawned = arena.getSpawner().spawnMobs(ImmutableList.of(new SpawnEntryData(mobType, spawnAmount)),
+                List<ActiveMob> spawned = arena.getSpawner().spawnMobs(List.of(new SpawnEntryData(mobType, spawnAmount)),
                         ignoreSpawnrule ? SpawnMethod.IGNORE_SPAWNRULE : SpawnMethod.RANGED, spawnpointData ->
                                 caster.getBukkitEntity().getLocation().toVector().distanceSquared(
                                         spawnpointData.getSpawn()) < originRadiusSquared, spawnRadiusSquared,
                         true, true);
 
                 for(ActiveMob mob : spawned) {
-                    registerMob(spawnedMobs, mob, caster.getUniqueId());
+                    registerMob(childMobs, mob, caster.getUniqueId());
                 }
             }
             else {
                 for(int i = 0; i < spawnAmount; i++) {
-                    ActiveMob mob = arena.getSpawner().spawnMobAt(mobType, caster.getBukkitEntity().getLocation()
-                            .toVector(), true);
+                    ActiveMob mob = arena.getSpawner().spawnMobAt(mobType, caster.getBukkitEntity()
+                            .getLocation().toVector(), true);
 
                     if(mob != null) {
-                        registerMob(spawnedMobs, mob, caster.getUniqueId());
+                        registerMob(childMobs, mob, caster.getUniqueId());
                     }
                 }
             }
@@ -91,32 +136,8 @@ public class SpawnMobMechanic extends ZombiesArenaSkill implements Listener {
         return false;
     }
 
-    @EventHandler
-    private void onMythicMobDeath(MythicMobDeathEvent event) {
-        UUID deadUUID = event.getEntity().getUniqueId();
-
-        if(mobs.remove(deadUUID) == null) { //if the caster died, remove its spawned instances
-            MetadataValue value = MetadataHelper.getMetadataFor(event.getEntity(), Zombies.getInstance(), OWNER_METADATA_NAME);
-            if(value != null) {
-                UUID owner = (UUID)value.value();
-
-                if(owner != null) {
-                    Set<UUID> spawned = mobs.get(owner);
-
-                    if(spawned != null) {
-                        spawned.remove(deadUUID);
-
-                        if(spawned.isEmpty()) {
-                            mobs.remove(owner);
-                        }
-                    }
-                }
-            }
-        }
-    }
-
-    private void registerMob(Set<UUID> registerTo, ActiveMob mob, UUID ownerId) {
-        registerTo.add(mob.getUniqueId());
-        MetadataHelper.setMetadataFor(mob.getEntity().getBukkitEntity(), OWNER_METADATA_NAME, Zombies.getInstance(), ownerId);
+    private void registerMob(Set<UUID> addTo, ActiveMob spawned, UUID ownerId) {
+        MetadataHelper.setFixedMetadata(spawned.getEntity().getBukkitEntity(), Zombies.getInstance(), PARENT, ownerId);
+        addTo.add(spawned.getUniqueId());
     }
 }
